Blurry fonts from Firefox 71.0a1 (2019-10-02) (64-bit)
Categories
(Core :: Graphics: Text, defect, P1)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox67 | --- | unaffected |
| firefox68 | --- | unaffected |
| firefox69 | --- | unaffected |
| firefox70 | --- | unaffected |
| firefox71 | + | verified |
| firefox72 | --- | verified |
People
(Reporter: drJeckyll, Assigned: lsalzman)
References
(Regression)
Details
(Keywords: regression)
Attachments
(9 files)
|
71.63 KB,
image/png
|
Details | |
|
75.80 KB,
image/png
|
Details | |
|
54.81 KB,
image/png
|
Details | |
|
59.19 KB,
image/png
|
Details | |
|
47 bytes,
text/x-phabricator-request
|
pascalc
:
approval-mozilla-beta+
|
Details | Review |
|
76.94 KB,
image/png
|
Details | |
|
83.35 KB,
image/png
|
Details | |
|
64.38 KB,
image/png
|
Details | |
|
70.90 KB,
image/png
|
Details |
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:71.0) Gecko/20100101 Firefox/71.0
Steps to reproduce:
As from 71.0a1 (2019-10-02) (64-bit) some fonts appear blurry. See shots
Bad shots are from 71.0a1 (2019-10-02) (64-bit). Good ones are from yesterday build 71.0a1 (2019-10-01) (64-bit).
This is Gentoo Linux. Shots taken from the same machine and same time.
Updated•6 years ago
|
Comment 5•6 years ago
|
||
The priority flag is not set for this bug.
:lsalzman, could you have a look please?
For more information, please visit auto_nag documentation.
| Assignee | ||
Comment 6•6 years ago
|
||
What does your fontconfig hint style setup look like in /etc/fonts/conf.d or similar? Also, what version of freetype are you using?
Fri Jul 5 22:33:46 2019 >>> media-libs/freetype-2.10.1
<match target="font">
<edit mode="assign" name="rgba"><const>rgb</const></edit>
<edit mode="assign" name="hinting"><bool>true</bool></edit>
<edit mode="assign" name="hintstyle"><const>hintfull</const></edit>
<edit mode="assign" name="antialias"><bool>true</bool></edit>
<edit mode="assign" name="lcdfilter"><const>lcddefault</const></edit>
</match>
BUT, I don't change anything about fonts. Just update firefox. Also if I go back to "good" version of firefox fonts are back to normal.
Comment 8•6 years ago
|
||
The priority flag is not set for this bug.
:lsalzman, could you have a look please?
For more information, please visit auto_nag documentation.
| Assignee | ||
Comment 9•6 years ago
|
||
Comment 10•6 years ago
|
||
| Assignee | ||
Updated•6 years ago
|
Comment 11•6 years ago
|
||
| bugherder | ||
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Comment 12•6 years ago
|
||
Comment on attachment 9102948 [details]
Bug 1585931 - don't use subpixel positioning for Fontconfig fonts if full hinting is requested. r?jfkthame
Beta/Release Uplift Approval Request
- User impact if declined: Regression on Linux where users who have explicitly forced Fontconfig hinting of text will not get the requested hinting. Just missed the cut-off for getting this change in 71...
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): In 71, subpixel positioning was enabled for text on Linux. This change just disables subpixel positioning again for users who have forced hinting of text, effectively just putting things back the way they used to be for those users.
- String changes made/needed:
Updated•6 years ago
|
Comment 13•6 years ago
|
||
Hi drjeckyll, could you confirm that you are no longer experiencing the bug in the last 72 nightlies? Thanks!
Comment 14•6 years ago
|
||
Changing the priority to p1 as the bug is tracked by a release manager for the current beta.
See What Do You Triage for more information
| Reporter | ||
Comment 15•6 years ago
|
||
At least for me, fonts looks much better now. Not sure if they back what were before, but they are not blurry or uneven.
| Reporter | ||
Comment 16•6 years ago
|
||
| Reporter | ||
Comment 17•6 years ago
|
||
Comment 18•6 years ago
|
||
Thanks, let's uplift to beta then :)
Comment 19•6 years ago
|
||
Comment on attachment 9102948 [details]
Bug 1585931 - don't use subpixel positioning for Fontconfig fonts if full hinting is requested. r?jfkthame
Low risk patch for some Linux configurations, verified as fixed on Nightly by the reporter, uplift approved for 71 beta 4, thanks.
Comment 20•6 years ago
|
||
| bugherder uplift | ||
Updated•6 years ago
|
Updated•6 years ago
|
Comment 21•6 years ago
|
||
Hello,
I could not reproduce this bug using Fx 71.0a1 BuildID: 20191002214349 on Ubuntu x64 18.04. I will remove the qe verify + flag. Thank you for confirming the fix drjeckyll!
Comment 22•6 years ago
|
||
Hi drjeckyll, if you would be so kind, can you verify that the fix is working for you on Firefox Beta 71.0b5 (https://archive.mozilla.org/pub/firefox/candidates/71.0b5-candidates/build1/) unfortunately we could not reproduce this issue on our hardware.
Thank you!
Updated•6 years ago
|
| Reporter | ||
Comment 23•6 years ago
|
||
(In reply to Daniel Cicas [:dcicas], Release QA from comment #22)
Hi drjeckyll, if you would be so kind, can you verify that the fix is working for you on Firefox Beta 71.0b5 (https://archive.mozilla.org/pub/firefox/candidates/71.0b5-candidates/build1/) unfortunately we could not reproduce this issue on our hardware.
Thank you!
It looks good to me
| Reporter | ||
Comment 24•6 years ago
|
||
| Reporter | ||
Comment 25•6 years ago
|
||
Comment 26•6 years ago
|
||
Thank you for verifying this issue!
Marking this bug as verified as per the reporters comments.
Updated•4 years ago
|
Description
•