Bug 1585931 - don't use subpixel positioning for Fontconfig fonts if full hinting is requested. r=jfkthame

Differential Revision: https://phabricator.services.mozilla.com/D49901